<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="@dimen/dialog_confim_width"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialog_confim_padding"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm_title"
            android:textSize="@dimen/text_size_6"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dialog_confim_min_height"
            android:text="@string/exit_message"
            android:textSize="@dimen/text_size_3"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dialog_confim_text_message_margin"
            android:padding="@dimen/dialog_confim_text_message_padding" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_line_1"
            android:background="@color/dialog_line_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_confim_button_height"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/layout_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <View
                    android:layout_width="@dimen/dialog_line_1"
                    android:layout_height="match_parent"
                    android:background="@color/dialog_line_1"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_size_5"
                    android:text="@string/cancel" />

                <include layout="@layout/background_highlight" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_size_5"
                    android:text="@string/ok" />

                <include layout="@layout/background_highlight" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>