<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_container_height"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/layout_menu_1">

            <include layout="@layout/background_highlight"></include>

            <include
                layout="@layout/line_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_menu_line_margin"
                android:layout_marginRight="@dimen/main_menu_line_margin"
                android:layout_alignParentBottom="true"></include>

            <ImageView
                android:layout_width="@dimen/main_menu_image_width_1"
                android:layout_height="wrap_content"
                android:src="@drawable/scheda_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_menu_image_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_item_1"
                android:textSize="@dimen/text_size_5"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_menu_item_text_margin" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_menu_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <include layout="@layout/background_highlight"></include>

            <include
                layout="@layout/line_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_menu_line_margin"
                android:layout_marginRight="@dimen/main_menu_line_margin"
                android:layout_alignParentBottom="true"></include>

            <ImageView
                android:layout_width="@dimen/main_menu_image_width_2"
                android:layout_height="wrap_content"
                android:src="@drawable/agromento_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_menu_image_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_item_2"
                android:textSize="@dimen/text_size_5"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_menu_item_text_margin" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_menu_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <include layout="@layout/background_highlight"></include>

            <include
                layout="@layout/line_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_menu_line_margin"
                android:layout_marginRight="@dimen/main_menu_line_margin"
                android:layout_alignParentBottom="true"></include>

            <ImageView
                android:layout_width="@dimen/main_menu_image_width_1"
                android:layout_height="wrap_content"
                android:src="@drawable/list_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_menu_image_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_item_3"
                android:textSize="@dimen/text_size_5"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_menu_item_text_margin" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/button_quick_exams"
        android:layout_width="@dimen/main_menu_button_quick_width"
        android:layout_height="@dimen/main_menu_button_quick_height"
        android:layout_marginTop="@dimen/main_menu_button_quick_height"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bg_quick_exams"/>
</LinearLayout>